--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Kieran Flynn - Web Developer</title>
 </head>
 
@@ -81,7 +81,7 @@
         </nav>   
 
         <aside>
-            <img class="profile" src="./Assets/Images/_MG_1581-COLOUR-2.jpg" alt="Picture of Me">
+            <img class="profile" src="./Images/_MG_1581-COLOUR-2.jpg" alt="Picture of Me">
         </aside>
             
       
