--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </nav>
 
         <aside>
-            <img class="profile" src="./colour-me.jpg" alt="Picture of Me">
+            <img class="profile" src="colour-me.jpg" alt="Picture of Me">
         </aside>
 
 
