demos and links

--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
             </p>
 
             <div>
-                <a href="https://www.google.com.au" target=”_blank”>
-                    <img src="https://cdn.pixabay.com/photo/2015/12/04/14/05/code-1076536_960_720.jpg" alt="HTML"></a>
-                <h2>Learning HTML</h2>
+                <a href="https://kieranmichaelflynn.github.io/Weather-Dashboard/" target=”_blank”>
+                    <img src="Weather-Dashboard-Demo.png" alt="Weather-Dashboard-Demo"></a>
+                <h2>Weather Dashboard!</h2>
 
             </div>
 
             <section class="card">
                 <ul>
-                    <a href="https://www.google.com.au" target=”_blank”>
+                    <a href="https://kieranmichaelflynn.github.io/Coding-Quiz/" target=”_blank”>
                         <li>
-                            <img src="https://cdn.pixabay.com/photo/2016/11/04/13/31/css-1797778_960_720.jpg" alt="CSS">
+                            <img src="Coding-quiz-Demo.png"
+                                alt="Coding-quiz-Demo">
                     </a>
-                    <h2>Learning CSS</h2>
+                    <h2>Coding Quiz</h2>
+                    </li>
+                    <a href="https://kieranmichaelflynn.github.io/Password-Generator/" target=”_blank”>
+                        <li>
+                            <img src="password-generator-demo.png" alt="password-generator-demo">
+                    </a>
+                    <h2>Javascript Password Generator</h2>
                     </li>
 
-                    <a href="https://www.google.com.au" target=”_blank”>
-                        <li>
-                            <img src="https://cdn.pixabay.com/photo/2016/03/27/18/54/technology-1283624_960_720.jpg"
-                                alt="Javascript">
-                    </a>
-                    <h2>Learning Javascript</h2>
-                    </li>
 
                 </ul>
             </section>
